rotary.css
body {
    overflow: hidden;
}

#move {
    width: 60%;
    bottom: 6%;
    left: 20%;
}

#aim {
    width: 40%;
    bottom: 11%;
    left: 30%;
}

.rotary {
    position: fixed;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    width: 80%;

    /*
        The width is 80%. 20% is left over. Half of that is 10%
        So, translate rotary right by 10%.
    */
    left: 10%;
    bottom: 1%;
    
    /* aesthetics */
    background-color: black;    
}

.marker {
    position: absolute;
    border-radius: 25%;
    border-top-left-radius: 0;
    border-bottom-right-radius: 50%;

    border-left: 3px ridge white;
    border-top: 3px ridge white;

    background-color: rgb(200, 50, 50, 0.8);
    padding: 5px;
    box-shadow: 1px 1px 4px;
}

